Entire code changed

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Aayush Verma- a Web Designer</title>
 
@@ -16,19 +16,19 @@
   <header class="top-container">
     <p>I am Aayush Verma</p>
     <p style="padding-top: 0px;">an aspiring web developer</p>
-    <img src="css/cloud.png" alt="cloud" class="cloud1">
-    <img src="css/cloud.png" alt="cloud" class="cloud2">
+    <img src="css/cloud.png" alt="cloud" class="cloud1" style="max-width: 100%;">
+    <img src="css/cloud.png" alt="cloud" class="cloud2"  style="max-width: 100%;">
   </header>
 
   <div class="introduction">
-    <img src="images/aayush2.jpg" alt="Aayush profile pic" class="profile">
+    <img src="images/aayush2.jpg" alt="Aayush profile pic" class="profile" style="max-width: 100%;">
     <p style="margin: 5px;"><b>Hello</b></p>
     <p style="font-size: 20px; margin: 0; padding: 10px 0;">Currently I am working as a Software Engineer at <span id="idemia">Idemia.</span></p>
     <p style="font-size: 20px; margin: 0;">I love programming and solving problems. Designing and developing has always been my interest and I am on the verge to achieve it.</p>
   </div>
 
   <div class="education"> 
-    <img src="https://www.flaticon.com/svg/static/icons/svg/747/747086.svg" alt="study" class="study">
+    <img src="https://www.flaticon.com/svg/static/icons/svg/747/747086.svg" alt="study" class="study" style="max-width: 100%;">
     <table class="education-table">
       <caption><b>Education</b></caption>
       <thead>
@@ -59,7 +59,7 @@
   </div>
 
   <div class="skills">
-    <img src="https://www.flaticon.com/svg/static/icons/svg/2621/2621040.svg" alt="coding" class="coding">
+    <img src="https://www.flaticon.com/svg/static/icons/svg/2621/2621040.svg" alt="coding" class="coding" style="max-width: 100%;">
     <p style="margin: 0; padding-top: 15px ;"><b>Skills</b></p>
     <ul>
       <li>C - ⭐⭐⭐⭐</li>
@@ -71,7 +71,7 @@
   </div>
 
   <div class="hobbies">
-    <img src="https://www.flaticon.com/svg/static/icons/svg/3588/3588658.svg" alt="hobby" class="hobby">
+    <img src="https://www.flaticon.com/svg/static/icons/svg/3588/3588658.svg" alt="hobby" class="hobby" style="max-width: 100%;">
     <p style="margin: 0; padding-top: 15px;"><b>Hobbies</b></p>
     <ul class="hobby-list">
       <li>reading</li>
@@ -84,7 +84,7 @@
   <div class="bottom-container">
   <h2 style="margin: 0;"><b>GET IN TOUCH & COLLABORATE</b></h2>
   <p>If you love designing and have a keen interest on web developing then do leave me a message here</p>
-  <img src="https://www.flaticon.com/premium-icon/icons/svg/2926/2926321.svg" alt="down-arrow" class="arrow">
+  <img src="https://www.flaticon.com/premium-icon/icons/svg/2926/2926321.svg" alt="down-arrow" class="arrow" style="max-width: 100%;">
   
   <a href="mailto: vermaaayush1309@gmail.com"><img src="https://www.flaticon.com/svg/static/icons/svg/2593/2593456.svg" alt="mail-box" class="message"></a>
   </div>
